# ABLS-AGENT-LIBS

./: .gitignore  CMakeLists.txt  Mnemonique.c  README.md  abls-agent-libs.pc.in  abls-satellite-libs.pc.in  build.sh  build_apt.sh  build_rpm.sh  bump.sh  install.sh  install_deps.sh
include/: abls-agent-libs.h  abls_agent_libs.h  abls_satellite_libs.h  agent.h  dls.h  http.h  mnemonique.h  mqtt_local.h
src/: agent.c  dls.c  http.c  mnemonique.c  mqtt_local.c  satellite.c  signal.c
